[gd_scene load_steps=5 format=2]

[ext_resource path="res://common/furniture/Seat/Seat.gd" type="Script" id=1]
[ext_resource path="res://common/furniture/Seat/seat.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 15 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 30, 30 )

[node name="Seat" type="StaticBody2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 1 )
tool_name = "Quill"

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="ChairCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Interact" type="Area2D" parent="."]

[node name="Interact" type="CollisionShape2D" parent="Interact"]
shape = SubResource( 2 )

[node name="DetectCrow" type="Area2D" parent="."]

[node name="DetectCrow" type="CollisionShape2D" parent="DetectCrow"]
shape = SubResource( 2 )

[node name="Audio" type="AudioStreamPlayer2D" parent="."]

[node name="pos" type="Position2D" parent="."]

[connection signal="body_entered" from="DetectCrow" to="." method="_on_crow_entered"]
[connection signal="body_exited" from="DetectCrow" to="." method="_on_crow_exited"]
